All the bugs Rectified